--- a/web-front/src/styles/index.scss
+++ b/web-front/src/styles/index.scss
@@ -34,6 +34,15 @@
   margin: 0;
 }
 
+.row {
+  flex-direction: row;
+  box-sizing: border-box;
+  display: flex;
+  max-height: 100%;
+  place-content: center space-around;
+  height: 40px;
+}
+
 @media (max-width: 768px) {
   #sidebar {
     margin-left: -17rem;
@@ -50,6 +59,14 @@
     width: calc(100% - 17rem);
   }
 }
+
+/*
+* Boot Strap overrides
+*/
+.navbar {
+  height: 50px;
+}
+
 
 /*
 *
